# lesynth-fourier

./: Cargo.toml  README.md
misc/: make_release_bundle_linux.sh  make_release_bundle_macos.sh  make_release_bundle_win.sh
src/: constants.rs  lib.rs  plugin.rs
src/engine/: analysis.rs  chart_type.rs  mod.rs  shared_params.rs  synth_compute_engine.rs
src/gui/: analysis_controls.rs  assembled_chart.rs  curve_controls.rs  harmonic_plot.rs  metallic_background.rs  mod.rs  nested_fourier_controls.rs  piano_keyboard.rs
src/params/: curve_type.rs  harmonic.rs  mod.rs  nested_fourier.rs  nested_fourier_amps.rs  nested_fourier_phases.rs  synth_params.rs
